--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,17 @@ services:
     build: .
     container_name: hyperliquid-market-maker
     ports:
-      - "5000:5000"  # Flask API and frontend
+      - "5000:80"  # Flask API and frontend
     volumes:
       - ./data:/app/data  # Persist database
     environment:
       - WALLET_ADDRESS=${WALLET_ADDRESS}
       - PRIVATE_KEY=${PRIVATE_KEY}
       - DB_PATH=/app/data/market_maker.db
+      - FLASK_PORT=80
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/api/stats"]
+      test: ["CMD", "curl", "-f", "http://localhost:80/api/stats"]
       interval: 30s
       timeout: 10s
       retries: 3
